--- a/asg_2/attempt_quiz.html
+++ b/asg_2/attempt_quiz.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <body id="attempt_quiz">
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>
         <h2>LMS - Attempt Quiz</h2>
