--- a/asg_2/attempt_quiz.html
+++ b/asg_2/attempt_quiz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <body id="attempt_quiz">
+
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>
         <h2>LMS - Attempt Quiz</h2>
@@ -20,6 +20,7 @@
         </nav>
     </div>
     <main>
+        <main id="attempt_quiz"></main>
         <img src="banner.jpg" alt="Quiz Banner" style="width: 100%;">
         <h2>Course: Web Development</h2>
         <p>Topic: HTML Basics</p>
