--- a/asg_2/attempt_quiz.html
+++ b/asg_2/attempt_quiz.html
@@ -19,8 +19,7 @@
             <a href="course_view.html">Courses</a> 
         </nav>
     </div>
-    <main>
-        <main id="attempt_quiz"></main>
+    <main id="attempt_quiz">
         <img src="banner.jpg" alt="Quiz Banner" style="width: 100%;">
         <h2>Course: Web Development</h2>
         <p>Topic: HTML Basics</p>
