--- a/asg_2/leaderboard.html
+++ b/asg_2/leaderboard.html
@@ -19,11 +19,11 @@
         </nav>
     </div>
 
-    <main>
+    <main id="leaderboard">
         <br>
         <br>
-        <table border="1" style="border-collapse: collapse; width: 100%; text-align: center;font-size: 20px;">
-            <tr style="background-color: #4CAF50; color: white;font-size: 36px;">
+        <table border="1">
+            <tr>
                 <th colspan="5">Leaderboard</th>
             </tr>
             <tr>
@@ -33,43 +33,43 @@
                 <th>Total Score</th>
                 <th>Course</th>
             </tr>
-            <tr style="background-color: #FFD700;">
+            <tr>
                 <td>1</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture"></td>
                 <td>John Doe</td>
                 <td>95</td>
                 <td>Web Development</td>
             </tr>
-            <tr style="background-color: #C0C0C0;">
+            <tr>
                 <td rowspan="2">2</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture"></td>
                 <td>Jane Smith</td>
                 <td>90</td>
                 <td>Data Structures</td>
             </tr>
-            <tr style="background-color: #C0C0C0;">
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+            <tr>
+                <td><img src="student.png" alt="Profile Picture"></td>
                 <td>Emily White</td>
                 <td>90</td>
                 <td>Algorithms</td>
             </tr>
-            <tr style="background-color: #CD7F32;">
+            <tr>
                 <td>3</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture"></td>
                 <td>Michael Brown</td>
                 <td>85</td>
                 <td>Machine Learning</td>
             </tr>
-            <tr style="background-color: #f9f9f9;">
+            <tr>
                 <td>4</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture"></td>
                 <td>Sarah Johnson</td>
                 <td>80</td>
                 <td>Networking</td>
             </tr>
-            <tr style="background-color: #e4e2e2;">
-                <td>4</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+            <tr>
+                <td>5</td>
+                <td><img src="student.png" alt="Profile Picture"></td>
                 <td>Rob Miller</td>
                 <td>75</td>
                 <td>Networking</td>
