--- a/asg_2/attempt_quiz.html
+++ b/asg_2/attempt_quiz.html
@@ -21,11 +21,12 @@
     </div>
     <main id="attempt_quiz">
         <img src="banner.jpg" alt="Quiz Banner" style="width: 100%;">
+        <div id="quiz_info">
         <h2>Course: Web Development</h2>
-        <p>Topic: HTML Basics</p>
+        <p id>Topic: HTML Basics</p>
         <p>Last Date: February 10, 2025</p>
         <p>Attempts Allowed: 1</p>
-        
+    </div>
         
         <h3>Question 1</h3>
         <p>What does HTML stand for?</p>
